# demos

./: .gitignore
appium-demos/python/: README.md  conftest.py  pyproject.toml
appium-demos/python/apis/: my_observatory_apis.py
appium-demos/python/pages/: action_bot.py  date_utils.py  my_observatory_page.py
appium-demos/python/reports/: report_2025-03-30_16-35-51.html  report_2025-03-30_16-37-36.html  report_2025-03-31_18-18-06.html
appium-demos/python/resources/: open_data_api.json  pda.api.fnd_e.xml.json
appium-demos/python/scripts/: format.sh
appium-demos/python/tests/: test_my_observatory_apis.py  test_my_observatory_page.py
go-demos/: go.mod
go-demos/demo01/: demo01.go
java-demos/: README.md  build.gradle.kts  settings.gradle.kts
java-demos/config/checkstyle/: google_checks.xml
java-demos/src/main/java/io/petesong/: Main.java
java-demos/src/main/java/io/petesong/algorithms/: BinaryTree.java  Searching.java  TreeNode.java
java-demos/src/main/java/io/petesong/leetcode/: LeetCode101.java  LeetCode13.java  LeetCode1480.java  LeetCode1672.java  LeetCode2235.java  LeetCode27.java  LeetCode33.java  LeetCode412.java  LeetCode79.java  LeetCode80.java
java-demos/src/test/java/io/petesong/algorithms/: BinaryTreeTest.java  SearchingTest.java  TreeNodeTest.java
java-demos/src/test/java/io/petesong/leetcode/: LeetCode101Test.java  (+9 more)
playwright-demos/nodejs/: package.json
playwright-demos/python/: README.md  pyproject.toml  setup.cfg
playwright-demos/python/features/: environment.py
playwright-demos/python/features/steps/: todomvc.py
playwright-demos/python/src/: todomvc_page.py
playwright-demos/python/tests/: test_behave.py  test_todomvc_page.py
python-demos/: .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml
python-demos/algorithms_learning/: arrays.py  binary_tree.py  prime_numbers.py  puzzles.py  search.py
python-demos/data/: pg26184.txt  pg26184_1.txt  test_text.txt
python-demos/demos/: asyncio_demo.py  file_demo.py  file_demos.py  func_demo.py  logging_demo.py  python_tutorial_demos.ipynb  re_demo.py  re_demos.py  requests_demo.py
python-demos/design_patterns/: singleton.py
python-demos/leetcode/: lc1.py  lc101.py  lc122.py  lc123.py  lc1672.py  lc169.py  lc189.py  lc219.py  lc2235.py  lc2248.py  lc2512.py  lc27.py  lc283.py  lc3.py  lc344.py  lc347.py  lc349.py  lc350.py  lc36.py  lc412.py  lc66.py  lc692.py  lc7.py  lc79.py  lc8.py
python-demos/leetcode_solutions/: lc121.py  lc13.py  lc1480.py  lc1672.py  lc2235.py  lc27.py  lc33.py  lc412.py  lc79.py  lc80.py
python-demos/python_demos/: hello.py
python-demos/scripts/: check.sh  format.sh
python-demos/tests/algorithms_learning/: test_arrays.py  test_prime_numbers.py  test_puzzles.py  test_search.py
python-demos/tests/demos/: test_asyncio_demo.py  test_file_demo.py  test_file_demos.py  test_logging_demo.py  test_re_demo.py  test_re_demos.py  test_requests_demo.py
python-demos/tests/design_patterns/: test_singleton.py
python-demos/tests/leedcode/: test_lc121.py  test_lc122.py  test_lc123.py  test_lc1480.py  test_lc189.py
python-demos/tests/leetcode/: test_lc1.py  test_lc101.py  test_lc13.py  test_lc169.py  test_lc219.py  test_lc2235.py  test_lc2248.py  test_lc2512.py  test_lc283.py  test_lc3.py  test_lc344.py  test_lc347.py  test_lc349.py  test_lc350.py  test_lc36.py  test_lc412.py  test_lc66.py  test_lc692.py  test_lc7.py  test_lc8.py
python-demos/tests/test_algorithms_learning/: test_binary_tree.py
python-demos/tests/test_leedcode_solutions/: test_lc101.py  test_lc121.py  test_lc13.py  test_lc1480.py  test_lc1672.py  test_lc2235.py  test_lc27.py  test_lc33.py  test_lc412.py  test_lc79.py  test_lc80.py
selenium-demos/python/: README.md  pyproject.toml
selenium-demos/python/features/: environment.py  todomvc.feature  tutorial.feature
selenium-demos/python/features/steps/: todomvc.py
selenium-demos/python/scripts/: check.sh
selenium-demos/python/src/: action_bot.py  loadable_component.py  todomvc_page.py
selenium-demos/python/tests/: conftest.py  test_todo_page.py  test_todomvc_page.py
swift-demos/demo01/: Package.resolved  Package.swift  README.md
swift-demos/demo01/Sources/: Demo01.swift
swift-demos/demo02/: Package.swift
swift-demos/demo02/Sources/: main.swift
