[project]
name = "python-demos"
version = "0.1.0"
description = "python demos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = ["python_demos", "leetcode_solutions", "tests"]
ignore_missing_imports = true
strict = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if __name__ == \"__main__\":",
]

[tool.pytest.ini_options]
pythonpath = "leetcode_solutions python_demos"
minversion = "8.0"
addopts = """
-ra
--cov=leetcode_solutions
--cov=python_demos
--cov-report=html
--cov-report=term
"""
testpaths = [
    "tests",
]
