[project]
name = "python-demos"
version = "0.1.0"
description = "python demos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = ["algorithms_learning", "demos", "design_patterns", "leetcode", "tests"]
ignore_missing_imports = true
strict = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if __name__ == .__main__.:",
    "def main() -> None:",
    "def main().{0,8}:",
]

[tool.pytest.ini_options]
pythonpath = "algorithms_learning demos design_patterns leetcode"
minversion = "8.0"
addopts = """
-ra
--cov=algorithms_learning
--cov=demos
--cov=design_patterns
--cov=leetcode
--cov-report=html
--cov-report=term
"""
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
]
