[project]
name = "python"
version = "0.1.0"
description = "Selenium-Python demos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.2.6",
    "pytest>=8.3.5",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[dependency-groups]
dev = []
